# todoist-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  REMOTE_INTEGRATION.md  deploy-to-aws.sh  deploy.sh  docker-compose.yml  openapi.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
ART/: icon.psd
aws-infra/: .gitignore  COST_OPTIMIZATION.md  COST_OPTIMIZATION_NOTES.md  DEPLOYMENT_COMPLETE.md  FINAL_DEPLOYMENT_GUIDE.md  README.md  package.json
aws-infra/lib/: alb-stack.ts  api-gateway-stack.ts  deploy-fresh.sh  ecr-stack.ts  ecs-stack.ts  efs-stack.ts  elastic-ip-stack.ts  http-api-stack.ts  network-stack.ts
cloudflare-worker/: package.json  tsconfig.json  wrangler.toml
cloudflare-worker/src/: index.ts  todoist-client.ts
deploy/: README.md  local-setup.md  nginx.conf  todoist-mcp.service
public/css/: styles.css
public/html/: error.html  oauth-setup.html  success.html
public/js/: success.js
scripts/: build-templates.d.ts  build-templates.d.ts.map  build-templates.js
src/: __main__.py  auth-page.ts  auth-service.ts  auth_handlers.py  auth_manager.py  auth_service.py  cleanup-do.ts  config.py  database.ts  fastmcp_integrated.py  final_server.py  index.ts  mcp-bridge.js  mcp_server.py  modern_fastmcp.py  native_server.py  oauth.ts  remote_server.py  server.js  simple_mcp_server.py  storage.ts  subscription-utils.ts  subscription.ts  todoist-client.ts  todoist-mcp-agent.ts  todoist-mcp.ts  todoist_client.py  types.ts  ui-loader.ts  ui-templates-generated.ts  ui.ts
src/tools/: comment-tools.ts  label-tools.ts  project-tools.ts  section-tools.ts  setup-tool.ts  task-tools.ts
